--- a/Backend/package.json
+++ b/Backend/package.json
@@ -19,6 +19,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "express-fileupload": "^1.5.1",
+    "express-formidable": "^1.2.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.7.0",
     "morgan": "^1.10.0",
@@ -27,6 +28,7 @@
     "nodemon": "^3.1.7",
     "react-bootstrap": "^2.10.5",
     "react-datepicker": "^7.4.0",
-    "react-icons": "^5.3.0"
+    "react-icons": "^5.3.0",
+    "slugify": "^1.6.6"
   }
 }
