--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,12 +12,14 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "antd": "^5.21.2",
     "axios": "^1.7.7",
     "date-fns": "^2.30.0",
     "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-big-calendar": "^1.15.0",
     "react-dom": "^18.3.1",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.26.2",
