--- a/Backend/package.json
+++ b/Backend/package.json
@@ -5,6 +5,7 @@
   "main": "server.js",
   "type": "module",
   "scripts": {
+    "test": "jest",
     "start": "node server.js",
     "server": "nodemon server.js"
   },
@@ -30,5 +31,11 @@
     "react-datepicker": "^7.4.0",
     "react-icons": "^5.3.0",
     "slugify": "^1.6.6"
+  },
+  "devDependencies": {
+    "@types/express": "^5.0.0",
+    "@types/supertest": "^6.0.2",
+    "jest": "^29.7.0",
+    "supertest": "^7.0.0"
   }
 }
