--- a/Backend/package.json
+++ b/Backend/package.json
@@ -27,6 +27,7 @@
     "node": "^22.9.0",
     "nodemodule": "^0.3.0",
     "nodemon": "^3.1.7",
+    "qrcode": "^1.5.4",
     "react-bootstrap": "^2.10.5",
     "react-datepicker": "^7.4.0",
     "react-icons": "^5.3.0",
