--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,8 @@
     "axios": "^1.7.7",
     "date-fns": "^2.30.0",
     "moment": "^2.30.1",
+    "qrcode": "^1.5.4",
+    "qrcode.react": "^4.0.1",
     "react": "^18.3.1",
     "react-big-calendar": "^1.15.0",
     "react-dom": "^18.3.1",
